<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mix IT</string>


    <string name="description_logo">Mix IT 2011</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_star">Star</string>
	<string name="description_email">E-Mail</string>

    <string name="btn_schedule">Schedule</string>
    <string name="btn_sessions">Sessions</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_speakers">Speakers</string>

	<string name="empty_sessions">No sessions found</string>
	<string name="empty_speakers">No speakers found</string>
	<string name="empty_session_detail">No session details found</string>
	<string name="empty_tags">No tags found</string>

	<string name="speaker_bio">Bio</string>
	<string name="speaker_sessions">Presentations</string>

	<string name="sessions_track">Track</string>
	<string name="sessions_tag">Tag</string>
	<string name="sessions_all">All</string>

	<string name="session_summary">Summary</string>
	<string name="session_parallel">In parallel</string>
	<string name="session_subtitle">%1$s in %2$s</string>
	<string name="session_speakers">Speakers</string>
	<string name="session_type">Type</string>
	<string name="session_tags">Tags</string>

	<string name="starred_sessions">Sessions</string>
	<string name="starred_speakers">Speakers</string>

	<string name="title_now_playing">Now playing</string>
	<string name="title_next_up">Next up</string>
	<string name="title_share">Share using</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_speakers">Speakers</string>
	<string name="title_speaker_detail">Speaker detail</string>
    <string name="title_schedule">Schedule</string>
	<string name="title_starred">Starred</string>
	<string name="title_tracks">Tracks</string>
	<string name="title_tags">Tags</string>
	<string name="title_settings">Settings</string>
	<string name="title_about">About</string>
	<string name="title_search">Search</string>
	<string name="title_search_query">Search for \'%1$s\'</string>
	<string name="title_new_sessions">New sessions</string>
	<string name="title_changed_starred_sessions">Changed starred sessions</string>

	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>

	<string name="settings_sync">Syncing</string>
	<string name="settings_notifications">Notifications</string>
	<string name="settings_visualizations">Visualizations</string>
	<string name="settings_sync_only_wifi">Only on WiFi</string>
	<string name="settings_sync_only_wifi_summary_on">Active</string>
	<string name="settings_sync_only_wifi_summary_off">Inactive</string>
	<string name="settings_notify_new_sessions">New sessions</string>
	<string name="settings_notify_changed_starred_sessions">Changed starred</string>
	<string name="settings_visualize_parallel_starred_sessions">Parallel starred</string>
	<string name="settings_visualize_parallel_starred_sessions_summary">Highlight starred sessions that occur at the same time in the starred session overview.</string>
	<string name="gray_out_passed_sessions">Gray out sessions</string>
	<string name="gray_out_passed_sessions_summary">Gray out sessions that occur in the past.</string>
	<string name="settings_focus_session_during_conference">Focus session</string>
	<string name="settings_focus_session_during_conference_summary">Set list focus to the current or next session during the conference.</string>

	<string name="share_template">Checking out \'%1$s\' at #mixit</string>

    <string name="toast_sync_error">Sync error: %1$s</string>

	<string name="search_sessions">Sessions</string>
	<string name="search_speakers">Speakers</string>

	<string name="search_label">MixIt</string>
	<string name="search_hint">Search keywords</string>

	<string name="now_playing_loading">Looking up nearby sessions\u2026</string>
	<string name="now_playing_no_results">No sessions nearby.</string>
	<string name="now_playing_next_up">See which sessions are up next.</string>
	<string name="now_playing_enable_wifi">Tap here to enable Wi-Fi for indoor location.</string>

	<plurals name="now_playing_countdown">
	    <item quantity="zero">%2$s</item>
	    <item quantity="one">%1$s day, %2$s</item>
	    <item quantity="other">%1$s days, %2$s</item>
	</plurals>

	<string name="now_playing_before_subtitle">Countdown to MixIt!</string>
	<string name="now_playing_after_title">See you next year!</string>
	<string name="now_playing_after_subtitle">Thanks for tuning in.</string>

	<string name="about_text1">Based on the Devoxx 2010 Schedule application, which was released under the Apache 2.0 license.</string>
	<string name="about_text2">Source code modified for the MixIt Conference by:</string>
	<string name="about_text3">Mathieu Calba\r\nmathieu.calba@gmail.com\r\nhttp://twitter.com/Mathieu_Calba</string>
	<string name="about_text4">Source code available at https://github.com/jripault/mix-it-android</string>
	<string name="about_text5">Version %s</string>

	<string name="new_session">New Mix It session</string>
	<string name="at_total"> in total.</string>
	<string name="update_session">Changed Mix It session</string>

	<string name="permission_write">Modify MixIt schedule data</string>

</resources>
