<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<!--
	Example layout adapted by Peter Kuterna.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
    </LinearLayout>

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:padding="10dip">
	    
	    <ImageView
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/logo_rgb"
	    	android:paddingBottom="10dip" />
	
	    <TextView style="@style/AboutText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_text1" />
	
	    <TextView style="@style/AboutText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_text2" />
	
	    <TextView style="@style/AboutText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_text3"
	        android:autoLink="web|email" />
	
	    <TextView style="@style/AboutText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_text4"
	        android:autoLink="web" />
	
	    <TextView style="@style/AboutText"
	        android:id="@+id/about_version"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	
	</LinearLayout>
</LinearLayout>
